--- a/soft/Makefile
+++ b/soft/Makefile
@@ -140,6 +140,7 @@ INCDIR  += base/Drivers/STM32F4xx_HAL_Driver/Inc
 INCDIR  += base/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy 
 INCDIR  += base/Drivers/CMSIS/Device/ST/stm32f4xx/Include 
 INCDIR  += base/Drivers/CMSIS/Include
+INCDIR  += base/Middlewares/Third_Party/FatFs/src
 
 # INCDIR  += app/common/canopennode
 # INCDIR  += app/common/canopennode/stack
@@ -175,9 +176,16 @@ SOURCES += base/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c
 SOURCES += base/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c 
 
 SOURCES += base/Src/main.c
+SOURCES += base/Src/fatfs.c
+SOURCES += base/Src/fatfs_platform.c
+SOURCES += base/Src/sd_diskio.c
+SOURCES += base/Src/bsp_driver_sd.c
 SOURCES += base/Src/system_stm32f4xx.c
 SOURCES += base/Src/stm32f4xx_it.c
 SOURCES += base/Src/stm32f4xx_hal_msp.c
+
+SOURCES += $(wildcard base/Middlewares/Third_Party/FatFs/src/option*.c)
+SOURCES += $(wildcard base/Middlewares/Third_Party/FatFs/src/*.c)
 
 SOURCES += $(wildcard src/*.c)
 
