--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,30 @@
-build/
-Debug/
+*/History/*
+*/Project Logs*
+*/Project Outputs*
+*/__Previews/*
+*/build/*
+build/*
+*/build-*
+*/Debug/
+*.Debug
+*.Release
+ui_*
+ui/Makefile
+*.user
+.qmake*
 .dep/
 .idea
 .settings/
 .vscode/
-.externalToolBuilders/
-dox/
 .project
 .cproject
-submpull.bat
-submpush.bat
+*.map
 *.bin
 *.elf
-*.map
 *.swp
 *.o
+*.lst
 *.d
 *.log
 logs
-failed
-tags
-run_config
-servo.config
-servo.creator
-servo.creator.user
-servo.files
-servo.includes
+*.ini
