--- a/soft/Makefile
+++ b/soft/Makefile
@@ -171,6 +171,8 @@ SOURCES += base/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c
 SOURCES += base/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c 
 SOURCES += base/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c 
 SOURCES += base/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c 
+SOURCES += base/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc.c 
+SOURCES += base/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc_ex.c 
 SOURCES += base/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rng.c 
 SOURCES += base/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c 
 SOURCES += base/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c 
